Bug 23329 - [PATCH] xserver doesn't stop all connections to localhost
Summary: [PATCH] xserver doesn't stop all connections to localhost
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: git
Hardware: Other All
: low minor
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-15 13:17 UTC by Jesse Adkins
Modified: 2009-08-18 21:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch checks for 127 at the front of an IPv4 address. (542 bytes, patch)
2009-08-15 13:17 UTC, Jesse Adkins
no flags Details | Splinter Review

Description Jesse Adkins 2009-08-15 13:17:14 UTC
Created attachment 28648 [details] [review]
Patch checks for 127 at the front of an IPv4 address.

I noticed in xserver at os/access.c that xorg tries to stop connections to localhost by checking against the address 127.0.0.1. However, RFC 3330 defines the localhost network as 127.0.0.0/8. This means that any IPv4 address that starts with 127 is just another name for localhost.
Comment 1 Alan Coopersmith 2009-08-18 21:19:12 UTC
Thanks for the fix - pushed to Xorg git master, and a similar fix to xdm
git as well.

http://cgit.freedesktop.org/xorg/xserver/commit/?id=75b9383d8a4c113ab3c6cfc1d5efcb5d9982a1bf

http://cgit.freedesktop.org/xorg/app/xdm/commit/


(BTW, please attach git format-patch output next time, and don't just 
 copy-and-paste git-diff output - it's easier to apply and shouldn't
 have the whitespace problems that kept this patch from applying.)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.