Treat all 127.0.0.0/8 addresses as localhost

Similar fix to http://bugs.freedesktop.org/show_bug.cgi?id=23329

Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>